# sourdough-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  atlas.hcl  docker-compose.yml  flake.nix  justfile  schema.sql
crates/database/: Cargo.toml
crates/database/src/: error.rs  lib.rs  pool.rs
crates/server/: Cargo.toml
crates/workspace_hack/: Cargo.toml
