[package]
name = "database"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "bigdecimal"] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
workspace_hack = { version = "0.1", path = "../workspace_hack" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
dotenv = "0.15"
